send email api with templates
